# EnPAC_2021

./: README.md
EnPAC/: Makefile  Makefile.am  Makefile.in  Petri_Net.cpp  Petri_Net.h  RG.h  config.h  config.h.in  config.status  configure  configure.ac  main.cpp  product.h  rref.h
EnPAC/BA/: Syntax_Tree.h  VWAA.h  atomic.h  buchi.h  set.h
EnPAC/autom4te.cache/: output.1  requests  traces.0  traces.1
EnPAC/lib/: libltdl.la  libltdl.so.7.2.1  libprofiler.so.0.4.18  libtcmalloc.so.4.5.3  libtcmalloc_and_profiler.so.4.5.3  libtcmalloc_debug.so.4.5.3  libtcmalloc_minimal.so.4.5.3  libtcmalloc_minimal_debug.so.4.5.3  libunwind-coredump.la  libunwind-coredump.so.0.0.0  libunwind-ptrace.la  libunwind-ptrace.so.0.0.0  libunwind-setjmp.la  libunwind-setjmp.so.0.0.0  libunwind-x86_64.la  libunwind-x86_64.so.8.0.1  libunwind.la  libunwind.so.8.0.1
