AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=EnPAC
EnPAC_SOURCES=BA/set.h BA/atomic.h BA/atomic.cpp BA/buchi.cpp BA/buchi.h BA/Syntax_Tree.cpp BA/Syntax_Tree.h BA/tinystr.cpp BA/tinystr.h BA/tinyxml.cpp BA/tinyxml.h BA/tinyxmlerror.cpp BA/tinyxmlparser.cpp BA/VWAA.cpp BA/VWAA.h main.cpp rref.h rref.cpp Petri_Net.cpp Petri_Net.h product.cpp product.h RG.cpp RG.h 
EnPAC_LDADD=./lib/libtcmalloc.so
EnPAC_LDFLAGS=-pthread -ltcmalloc
EnPAC_CXXFLAGS=-O3
